Microservice-a/Istio Rules/microservice-a-virtualservice-delay.yaml
# We can inject delays into the request as

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-a
spec:
  hosts:
  - microservice-a
  gateways:
  - microservice-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: microservice-a
        subset: v1
    fault:
      delay:
        percent: 100
        fixedDelay: 5s
