Microservice-a/Istio Rules/microservice-a-virtualservice-trafficsplitting.yaml
# Rather than routing 100% of the traffic to v1, you can also configure weights so that you can route x% of traffic to v1, and y% of traffic to v2

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-a
spec:
  hosts:
  - microservice-a
  gateways:
  - microservice-gateway
 http:
  - match:
    - uri:
        prefix: /microservice-a
    rewrite:
      uri: /
    route:
    - destination:
        host: microservice-a
        subset: v1
      weight: 80
    - destination:
        host: microservice-a
        subset: v2
      weight: 20
