Microservice-a/Istio Rules/microservice-a-virtualservice-v1.yaml
# For routing 1000% of the traffic to v1,defined by subset

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-a
spec:
  hosts:
  - "*"
  gateways:
  - microservice-gateway
 http:
  - match:
    - uri:
        prefix: /microservice-a
    rewrite:
      uri: /
    route:
    - destination:
        host: microservice-a
        subset: v1
